// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Register Page test cases Client validation check 1`] = `
<span
  class="css-1reg724"
  role="alert"
>
   
</span>
`;

exports[`Register Page test cases Client validation check 2`] = `
<span
  class="css-1reg724"
  role="alert"
>
   
</span>
`;

exports[`Register Page test cases Client validation check 3`] = `
<span
  class="css-1reg724"
  role="alert"
>
  <span
    class="css-xjluvf"
  >
    Password is not strong enough
  </span>
</span>
`;

exports[`Register Page test cases Client validation check 4`] = `
<span
  class="css-1reg724"
  role="alert"
>
  <span
    class="css-xjluvf"
  >
    Passwords must match
  </span>
</span>
`;

exports[`Register Page test cases Render check 1`] = `
<div>
  <form
    data-testid="registerForm"
    novalidate=""
  >
    <div
      class="css-gbwc6v"
    >
      <section
        class="css-1c469nw"
      >
        <h2>
          Register Page
        </h2>
        <label
          class="css-fjegpl"
          height="7"
          width="20"
        >
          <span
            class="css-1grri41"
          >
            Your username:
          </span>
          <div
            class="css-11gjszk"
          >
            <input
              class="css-1h6wv30"
              data-testid="registerUsername"
              maxlength="10"
              minlength="5"
              name="username"
              placeholder="..."
            />
          </div>
          <span
            class="css-1reg724"
            role="alert"
          >
             
          </span>
        </label>
        <label
          class="css-fjegpl"
          height="7"
          width="20"
        >
          <span
            class="css-1grri41"
          >
            Your email:
          </span>
          <div
            class="css-11gjszk"
          >
            <input
              class="css-1h6wv30"
              data-testid="registerEmail"
              name="email"
              placeholder="..."
              type="email"
            />
          </div>
          <span
            class="css-1reg724"
            role="alert"
          >
             
          </span>
        </label>
        <label
          class="css-fjegpl"
          height="7"
          width="20"
        >
          <span
            class="css-1grri41"
          >
            Your password:
          </span>
          <div
            class="css-11gjszk"
          >
            <input
              class="css-1h6wv30"
              data-testid="registerPassword"
              maxlength="10"
              minlength="8"
              name="password"
              placeholder="**********"
              type="password"
            />
          </div>
          <span
            class="css-1reg724"
            role="alert"
          >
             
          </span>
        </label>
        <label
          class="css-fjegpl"
          height="7"
          width="20"
        >
          <span
            class="css-1grri41"
          >
            Confirm your password:
          </span>
          <div
            class="css-11gjszk"
          >
            <input
              class="css-1h6wv30"
              data-testid="registerPasswordConfirmation"
              maxlength="10"
              minlength="8"
              name="passwordConfirmation"
              placeholder="**********"
              type="password"
            />
          </div>
          <span
            class="css-1reg724"
            role="alert"
          >
             
          </span>
        </label>
        <button
          class="css-tp74ot"
          style="margin-top: 1rem;"
          type="submit"
        >
          Done
        </button>
        <a
          class="css-1ghpz66"
          href="/login"
          style="margin-top: 1rem; font-weight: bold;"
        >
          Access your account
        </a>
      </section>
    </div>
  </form>
</div>
`;
